force-app/main/default/objects/Study_Program_Version__c/Study_Program_Version__c.object-meta.xml
<CustomObject>
    <label>Study Program Version</label>
    <nameField>
        <label>Study Program Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Program Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>