force-app/main/default/objects/Study_Program_Version__c/fields/Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>Academic_Level__c</fullName>
    <label>Academic Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Higher Doctorate</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Bachelors Honours</fullName>
            </value>
            <value>
                <fullName>Graduate Certificate</fullName>
            </value>
            <value>
                <fullName>Associate degree</fullName>
            </value>
            <value>
                <fullName>Advanced Diploma</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>