force-app/main/default/objects/Study_Program_Version__c/fields/Auto_Unit_Recognition_Scope__c.field-meta.xml
<CustomField>
    <fullName>Auto_Unit_Recognition_Scope__c</fullName>
    <label>Auto Unit Recognition Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>All Academic Profiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>